unpackaged/main/default/objects/Contract/fields/Ad_Spend_Management_Spend__c.field-meta.xml
<CustomField>
    <fullName>Ad_Spend_Management_Spend__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ad Management Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>