unpackaged/main/default/objects/Contract/fields/Amount_Paid_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_by_Client__c</fullName>
    <formula>Total_Monthly_Fee__c +  Ad_Spend__c +  Ad_Spend_Management_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Paid by Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>