unpackaged/main/default/objects/Contract/fields/Contract_Renewal_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date_1__c</fullName>
    <label>Contract Renewal Date</label>
    <type>Date</type>
</CustomField>