unpackaged/main/default/objects/Contract/fields/Contract_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal_Date__c</fullName>
    <formula>EndDate +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>[OLD] Contract Renewal Date</label>
    <type>Date</type>
</CustomField>