unpackaged/main/default/objects/Contract/fields/Count_of_Copilot_Agent_Seats__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Copilot_Agent_Seats__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Copilot Agent Seats</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>