unpackaged/main/default/objects/Contract/fields/Count_of_Monthly_Blogs__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Monthly_Blogs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Monthly Blogs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>