unpackaged/main/default/objects/Contract/fields/Courtesy_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Extension_Date__c</fullName>
    <label>Courtesy Extension Date</label>
    <type>Date</type>
</CustomField>