unpackaged/main/default/objects/Contract/fields/Created_with_Add_Service__c.field-meta.xml
<CustomField>
    <fullName>Created_with_Add_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created with Add Service</label>
    <type>Checkbox</type>
</CustomField>