unpackaged/main/default/objects/Contract/fields/Free_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Free_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Subscription</label>
    <type>Checkbox</type>
</CustomField>