unpackaged/main/default/objects/Contract/fields/Monthly_Marketing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Marketing_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Monthly Marketing Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>