unpackaged/main/default/objects/Contract/fields/Net_Won_Opportunity_Software_ARR__c.field-meta.xml
<CustomField>
    <fullName>Net_Won_Opportunity_Software_ARR__c</fullName>
    <label>Net Won Opportunity Software ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>