unpackaged/main/default/objects/Contract/fields/Original_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_End_Date__c</fullName>
    <label>Original End Date</label>
    <type>Date</type>
</CustomField>