unpackaged/main/default/objects/Contract/fields/Paid_Media_Service__c.field-meta.xml
<CustomField>
    <fullName>Paid_Media_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Media Service</label>
    <type>Checkbox</type>
</CustomField>