unpackaged/main/default/objects/Contract/fields/Prebill_Days__c.field-meta.xml
<CustomField>
    <fullName>Prebill_Days__c</fullName>
    <label>Prebill Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>