unpackaged/main/default/objects/Contract/fields/Presence_Copilot__c.field-meta.xml
<CustomField>
    <fullName>Presence_Copilot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presence Copilot</label>
    <type>Checkbox</type>
</CustomField>