unpackaged/main/default/objects/Contract/fields/Primary_contact_email__c.field-meta.xml
<CustomField>
    <fullName>Primary_contact_email__c</fullName>
    <label>Primary contact email</label>
    <type>Email</type>
</CustomField>