unpackaged/main/default/objects/Contract/fields/Product_AI_Lead_Nurturing__c.field-meta.xml
<CustomField>
    <fullName>Product_AI_Lead_Nurturing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product AI Lead Nurturing</label>
    <type>Checkbox</type>
</CustomField>