unpackaged/main/default/objects/Contract/fields/Renewal_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Renewal Contract)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>