unpackaged/main/default/objects/Contract/fields/Social_Media_Service__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Media Service</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>