unpackaged/main/default/objects/Contract/fields/Subscription_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription 18 Digit ID</label>
    <type>Text</type>
</CustomField>