unpackaged/main/default/objects/Contract/fields/Subscription_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Name__c</fullName>
    <label>Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>