unpackaged/main/default/objects/Contract/fields/SYS_Renew_Contract__c.field-meta.xml
<CustomField>
    <fullName>SYS_Renew_Contract__c</fullName>
    <formula>NOT(ISBLANK(Contract_Renewal_Date_1__c)) &amp;&amp;
 Contract_Renewal_Date_1__c  &lt; TODAY() &amp;&amp;
ISPICKVAL(Status,&quot;Activated&quot;)</formula>
    <label>SYS - Renew Contract</label>
    <type>Checkbox</type>
</CustomField>