unpackaged/main/default/objects/Contract/fields/Total_Monthly_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Fee__c</fullName>
    <formula>Monthly_Marketing_Fee__c +  Monthly_Subscription_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>